@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190217"
-#define public MagickPackageReleaseDate "snapshot-20190217"
+#define public MagickPackageVersionAddendum ".020190221"
+#define public MagickPackageReleaseDate "snapshot-20190221"
